--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "expense-tracker",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "./entry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,13 +9,60 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/match-media": "^0.4.0",
+    "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@tamagui/animations-react-native": "1.144.3",
+    "@tamagui/babel-plugin": "1.144.3",
+    "@tamagui/config": "1.144.3",
+    "@tamagui/font-inter": "1.144.3",
+    "@tamagui/group": "1.144.3",
+    "@tamagui/react-native-media-driver": "1.144.3",
+    "@tamagui/shorthands": "1.144.3",
+    "@tamagui/stacks": "1.144.3",
+    "@tamagui/text": "1.144.3",
+    "@tamagui/themes": "1.144.3",
+    "date-fns": "^4.1.0",
+    "drizzle-orm": "^0.45.1",
     "expo": "~54.0.33",
+    "expo-auth-session": "~7.0.10",
+    "expo-constants": "~18.0.13",
+    "expo-crypto": "~15.0.8",
+    "expo-file-system": "~19.0.21",
+    "expo-linking": "~8.0.11",
+    "expo-router": "~6.0.23",
+    "expo-screen-orientation": "^9.0.8",
+    "expo-secure-store": "~15.0.8",
+    "expo-sharing": "~14.0.8",
+    "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
+    "expo-web-browser": "~15.0.10",
+    "fast-text-encoding": "^1.0.6",
+    "firebase": "^12.9.0",
+    "papaparse": "^5.5.3",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-gifted-charts": "^1.4.74",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-url-polyfill": "^3.0.0",
+    "react-native-web": "^0.21.2",
+    "react-native-worklets": "0.5.1",
+    "tamagui": "1.144.3",
+    "uuid": "^13.0.0",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
-    "@types/react": "~19.1.0",
+    "@types/papaparse": "^5.5.2",
+    "@types/react": "~19.1.10",
+    "@types/uuid": "^10.0.0",
+    "babel-preset-expo": "^54.0.10",
+    "cross-env": "^7.0.3",
+    "drizzle-kit": "^0.31.9",
     "typescript": "~5.9.2"
   },
   "private": true
