--- a/app.json
+++ b/app.json
@@ -7,22 +7,29 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
-    "scheme": "expense-tracker",
+    "scheme": "expensetracker",
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "ios": {
-      "supportsTablet": true
-    },
     "android": {
+      "package": "com.ifham.expensetracker",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
+      "googleServicesFile": "./google-services.json",
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "permissions": [
+        "android.permission.INTERNET"
+      ]
+    },
+    "ios": {
+      "bundleIdentifier": "com.ifham.expensetracker",
+      "googleServicesFile": "./GoogleService-Info.plist",
+      "supportsTablet": true
     },
     "web": {
       "favicon": "./assets/favicon.png",
@@ -35,6 +42,7 @@
           "root": "src/app"
         }
       ],
+      "@react-native-google-signin/google-signin",
       "expo-sqlite",
       "expo-web-browser",
       "expo-secure-store"
