--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "main": "./entry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "prebuild": "expo prebuild --clean"
   },
   "dependencies": {
     "@expo/match-media": "^0.4.0",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-google-signin/google-signin": "^11.0.1",
     "@tamagui/animations-react-native": "1.144.3",
     "@tamagui/babel-plugin": "1.144.3",
     "@tamagui/config": "1.144.3",
@@ -34,6 +36,7 @@
     "expo-screen-orientation": "^9.0.8",
     "expo-secure-store": "~15.0.8",
     "expo-sharing": "~14.0.8",
+    "expo-splash-screen": "^31.0.13",
     "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
     "expo-web-browser": "~15.0.10",
