feat: update package dependencies and implement AppSelect component
- Updated package.json to use caret (^) for @tamagui/lucide-icons and set @tamagui/select to version 1.144.3.
- Refactored SettingsScreen to utilize AppSelect for theme and currency selection, enhancing user experience with icons and descriptions.
- Introduced AppSelect component for better select functionality with icons and descriptions.
- Modified SettingsGroup to conditionally apply press styles based on interactivity.
- Adjusted theme handling in RootLayout to align with new settings structure.

--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "@tamagui/config": "1.144.3",
     "@tamagui/font-inter": "1.144.3",
     "@tamagui/group": "1.144.3",
-    "@tamagui/lucide-icons": "1.144.3",
+    "@tamagui/lucide-icons": "^1.144.3",
     "@tamagui/react-native-media-driver": "1.144.3",
-    "@tamagui/select": "^2.0.0-rc.12",
+    "@tamagui/select": "1.144.3",
     "@tamagui/shorthands": "1.144.3",
     "@tamagui/stacks": "1.144.3",
     "@tamagui/text": "1.144.3",
