--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-native-worklets": "0.5.1",
     "tamagui": "1.144.3",
     "uuid": "^13.0.0",
+    "xlsx-js-style": "^1.2.0",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
