--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "prebuild": "expo prebuild --clean",
+    "lint": "eslint .",
+    "format": "prettier --check .",
+    "format:write": "prettier --write .",
     "db:generate": "drizzle-kit generate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio"
@@ -68,12 +71,16 @@
     "zustand": "^5.0.11"
   },
   "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-config-expo": "^8.0.0",
+    "eslint-config-prettier": "^10.1.8",
     "@types/papaparse": "^5.5.2",
     "@types/react": "~19.1.10",
     "@types/uuid": "^10.0.0",
     "babel-preset-expo": "^54.0.10",
     "cross-env": "^7.0.3",
     "drizzle-kit": "^0.31.9",
+    "prettier": "^3.6.2",
     "typescript": "~5.9.2"
   },
   "private": true
