chore: update dependencies and refactor authentication flow
- Updated @react-native-google-signin/google-signin to version 16.1.1
- Updated @tamagui/core and added @tamagui/portal
- Refactored AuthLayout to handle user authentication state and redirect accordingly
- Refactored TabLayout to check user authentication and redirect to login if not signed in
- Simplified RootLayout by removing navigation logic and setting up providers
- Commented out Google Sign-In logic in useGoogleSignIn for future implementation
- Updated shadows in theme tokens for better consistency

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,13 @@ node_modules/
 
 # Expo
 .expo/
+.expo-shared/
 dist/
 web-build/
 expo-env.d.ts
+
+# Tamagui
+.tamagui/
 
 # Native
 .kotlin/
@@ -17,8 +21,11 @@ expo-env.d.ts
 *.p12
 *.key
 *.mobileprovision
-google-services.json
-GoogleService-Info.plist
+
+# Native build artifacts
+*.apk
+*.aab
+*.ipa
 
 # Metro
 .metro-health-check*
@@ -27,14 +34,29 @@ GoogleService-Info.plist
 npm-debug.*
 yarn-debug.*
 yarn-error.*
+pnpm-debug.*
+*.log
+.eslintcache
+
+# IDE/editor
+.idea/
+.vscode/
+*.iml
 
 # macOS
 .DS_Store
 *.pem
 
+# Windows
+Thumbs.db
+Desktop.ini
+
 # local env files
 .env
 .env*.local
+
+# local config
+kotlin/new.properties
 
 # typescript
 *.tsbuildinfo
