--- a/app.json
+++ b/app.json
@@ -46,6 +46,14 @@
       "expo-sqlite",
       "expo-web-browser",
       "expo-secure-store"
-    ]
+    ],
+    "extra": {
+      "router": {
+        "root": "src/app"
+      },
+      "eas": {
+        "projectId": "78e952fc-6b81-4273-9e59-0bb7720124dc"
+      }
+    }
   }
 }
