--- a/package.json
+++ b/package.json
@@ -19,18 +19,16 @@
     "@expo/match-media": "^0.4.0",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-google-signin/google-signin": "^11.0.1",
+    "@react-native-google-signin/google-signin": "^16.1.1",
+    "@react-navigation/native": "^7.1.8",
     "@tamagui/animations-react-native": "1.144.3",
     "@tamagui/babel-plugin": "1.144.3",
-    "@tamagui/config": "1.144.3",
+    "@tamagui/core": "1.144.3",
     "@tamagui/font-inter": "1.144.3",
-    "@tamagui/group": "1.144.3",
     "@tamagui/lucide-icons": "^1.144.3",
+    "@tamagui/portal": "1.144.3",
     "@tamagui/react-native-media-driver": "1.144.3",
-    "@tamagui/select": "1.144.3",
     "@tamagui/shorthands": "1.144.3",
-    "@tamagui/stacks": "1.144.3",
-    "@tamagui/text": "1.144.3",
     "@tamagui/themes": "1.144.3",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.45.1",
@@ -38,6 +36,7 @@
     "expo-auth-session": "~7.0.10",
     "expo-constants": "~18.0.13",
     "expo-crypto": "~15.0.8",
+    "expo-dev-client": "~6.0.20",
     "expo-file-system": "~19.0.21",
     "expo-haptics": "^15.0.8",
     "expo-linear-gradient": "~15.0.8",
@@ -50,9 +49,7 @@
     "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
     "expo-web-browser": "~15.0.10",
-    "fast-text-encoding": "^1.0.6",
     "firebase": "^12.9.0",
-    "papaparse": "^5.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
@@ -62,7 +59,6 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
-    "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "^0.21.2",
     "react-native-worklets": "0.5.1",
     "tamagui": "1.144.3",
@@ -71,15 +67,13 @@
     "zustand": "^5.0.11"
   },
   "devDependencies": {
-    "eslint": "^8.57.0",
-    "eslint-config-expo": "^8.0.0",
-    "eslint-config-prettier": "^10.1.8",
-    "@types/papaparse": "^5.5.2",
-    "@types/react": "~19.1.10",
-    "@types/uuid": "^10.0.0",
+    "@types/react": "^19.2.14",
+    "@types/uuid": "^11.0.0",
     "babel-preset-expo": "^54.0.10",
-    "cross-env": "^7.0.3",
     "drizzle-kit": "^0.31.9",
+    "eslint": "^10.0.0",
+    "eslint-config-expo": "^10.0.0",
+    "eslint-config-prettier": "^10.1.8",
     "prettier": "^3.6.2",
     "typescript": "~5.9.2"
   },
