--- a/package.json
+++ b/package.json
@@ -18,18 +18,33 @@
   "dependencies": {
     "@expo/match-media": "^0.4.0",
     "@expo/vector-icons": "^15.0.3",
-    "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-google-signin/google-signin": "^16.1.1",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-google-signin/google-signin": "^13.3.1",
+    "@react-navigation/material-top-tabs": "^7.4.13",
     "@react-navigation/native": "^7.1.8",
+    "@tamagui/accordion": "^1.144.3",
+    "@tamagui/alert-dialog": "^1.144.3",
     "@tamagui/animations-react-native": "1.144.3",
+    "@tamagui/avatar": "^1.144.3",
     "@tamagui/babel-plugin": "1.144.3",
+    "@tamagui/card": "^1.144.3",
+    "@tamagui/checkbox": "^1.144.3",
     "@tamagui/core": "1.144.3",
     "@tamagui/font-inter": "1.144.3",
+    "@tamagui/group": "^1.144.3",
+    "@tamagui/label": "^1.144.3",
+    "@tamagui/list-item": "^1.144.3",
     "@tamagui/lucide-icons": "^1.144.3",
     "@tamagui/portal": "1.144.3",
+    "@tamagui/progress": "^1.144.3",
     "@tamagui/react-native-media-driver": "1.144.3",
+    "@tamagui/separator": "^1.144.3",
     "@tamagui/shorthands": "1.144.3",
+    "@tamagui/switch": "^1.144.3",
+    "@tamagui/tabs": "^1.144.3",
     "@tamagui/themes": "1.144.3",
+    "@tamagui/toast": "^1.144.3",
+    "burnt": "^0.13.0",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.45.1",
     "expo": "~54.0.33",
@@ -38,14 +53,15 @@
     "expo-crypto": "~15.0.8",
     "expo-dev-client": "~6.0.20",
     "expo-file-system": "~19.0.21",
-    "expo-haptics": "^15.0.8",
+    "expo-font": "~14.0.11",
+    "expo-haptics": "~15.0.8",
     "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.11",
     "expo-router": "~6.0.23",
-    "expo-screen-orientation": "^9.0.8",
+    "expo-screen-orientation": "~9.0.8",
     "expo-secure-store": "~15.0.8",
     "expo-sharing": "~14.0.8",
-    "expo-splash-screen": "^31.0.13",
+    "expo-splash-screen": "~31.0.13",
     "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
     "expo-web-browser": "~15.0.10",
@@ -55,11 +71,14 @@
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-gifted-charts": "^1.4.74",
+    "react-native-pager-view": "6.9.1",
+    "react-native-paper": "^5.12.5",
+    "react-native-paper-dates": "^0.23.4",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
-    "react-native-web": "^0.21.2",
+    "react-native-web": "^0.21.0",
     "react-native-worklets": "0.5.1",
     "tamagui": "1.144.3",
     "uuid": "^13.0.0",
@@ -67,14 +86,16 @@
     "zustand": "^5.0.11"
   },
   "devDependencies": {
-    "@types/react": "^19.2.14",
+    "@types/react": "~19.1.10",
+    "@types/react-dom": "~19.1.10",
     "@types/uuid": "^11.0.0",
-    "babel-preset-expo": "^54.0.10",
-    "drizzle-kit": "^0.31.9",
-    "eslint": "^10.0.0",
-    "eslint-config-expo": "^10.0.0",
+    "babel-preset-expo": "~54.0.10",
+    "drizzle-kit": "^0.18.1",
+    "eslint": "9.39.3",
+    "eslint-config-expo": "~10.0.0",
     "eslint-config-prettier": "^10.1.8",
     "prettier": "^3.6.2",
+    "react-refresh": "0.18.0",
     "typescript": "~5.9.2"
   },
   "private": true
